--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,21 @@
     <version>7.7.1</version>
     <scope>test</scope>
 </dependency>
-
-
-
-  
-  
-  
-  
   </dependencies>
+  
+<build>
+    <plugins>
+        <!-- Surefire Plugin to run TestNG tests -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+            <configuration>
+                <suiteXmlFiles>
+                    <suiteXmlFile>testing.xml</suiteXmlFile>
+                </suiteXmlFiles>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
