--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
             <version>3.0.0-M5</version>
             <configuration>
                 <suiteXmlFiles>
-                    <suiteXmlFile>testing.xml</suiteXmlFile>
+                    <suiteXmlFile>src/Testing.xml</suiteXmlFile>
                 </suiteXmlFiles>
             </configuration>
         </plugin>
